Fixed z-index modal for resolve conflict with modal footer.

--- a/src/assets/styles/plugins/ng-dropdown-multiselect.styl
+++ b/src/assets/styles/plugins/ng-dropdown-multiselect.styl
@@ -49,7 +49,7 @@
       box-shadow 1px 2px 3px 2px rgba(0,0,0,0.3)
       background #fff
       color #4f4e57
-      z-index 10
+      z-index 100
       animation fadeInDown .1s
       li a
         display block
